--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <body>
 
     <header>
+         <img src="" style="width: 150px; height: auto;">
         <h1>Agro Arveja S.A.S</h1>
     </header>
 
