--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
 
     <div class="contact">
         <h2>Datos de Contacto</h2>
-        <p><strong>Dirección:</strong> San Antonio Norte a 2.5Km De parque los Libertadores , Duitama Boyacá , Colombia</p>
+        <p><strong>Dirección:</strong> San Antonio Sur a 2.5Km De parque los Libertadores , Duitama Boyacá , Colombia</p>
         <p><strong>Teléfono:</strong>  310 3946927 y 313 6987198</p>
         <p><strong>Correo Electrónico:</strong> Santiagodaza001k@gmail.com y juanesteban5758@gmail.com</p>
-
-        <h3>Formulario de Contacto</h3>
         <form action="#"
