--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
     <header>
-         <img src="https://github.com/Tadashim/Agro-arveja-S.A.S/blob/main/a2fbef27-cb4b-4f83-b419-1bfef3a51bd2.jpg?raw=true" style="width: 300px; height: auto;">
+         <img src="https://github.com/santiago-avella01k/Agro-arveja-S.A.S/blob/main/logotipo.jpg?raw=true" style="width: 300px; height: auto;">
         <h1>Agro Arveja S.A.S</h1>
     </header>
 
