--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <div class="contact">
         <h2>Datos de Contacto</h2>
-        <p><strong>Dirección:</strong> San Antonio Sur a 2.5Km De parque los Libertadores , Duitama Boyacá , Colombia</p>
-        <p><strong>Teléfono:</strong>  310 3946927 y 313 6987198</p>
-        <p><strong>Correo Electrónico:</strong> Santiagodaza001k@gmail.com y juanesteban5758@gmail.com</p>
+        <p><strong>Dirección:</strong> San Antonio Sur a 2.8Km Del parque los Libertadores, Duitama Boyacá , Colombia</p>
+        <p><strong>Teléfonos:</strong>  310 3946927 y 313 6987198</p>
+        <p><strong>Correos Electrónicos:</strong> Santiagodaza001k@gmail.com y juanesteban5758@gmail.com</p>
         
         <form action="#"
